--- a/python/Pipfile
+++ b/python/Pipfile
@@ -31,6 +31,7 @@ pykafka = "*"
 python-dateutil = "*"
 sickle = "*"
 python-snappy = "*"
+pymacaroons = "*"
 
 [requires]
 # Python 3.5 is the bundled (system) version of python for Ubuntu 16.04
