basic/crude IA login

--- a/python/env.example
+++ b/python/env.example
@@ -5,4 +5,6 @@ ELASTICSEARCH_BACKEND="http://localhost:9200"
 ELASTICSEARCH_INDEX="fatcat"
 GITLAB_CLIENT_ID=""
 GITLAB_CLIENT_SECRET=""
+IA_XAUTH_CLIENT_ID=""
+IA_XAUTH_CLIENT_SECRET=""
 SENTRY_DSN=""
