--- a/python/env.example
+++ b/python/env.example
@@ -9,3 +9,11 @@ GITLAB_CLIENT_SECRET=""
 IA_XAUTH_CLIENT_ID=""
 IA_XAUTH_CLIENT_SECRET=""
 SENTRY_DSN=""
+
+# These auth keys only for workers/importers; locally will fall back to
+# FATCAT_API_AUTH_TOKEN
+FATCAT_AUTH_WORKER_CROSSREF=""
+FATCAT_AUTH_WORKER_ORCID=""
+FATCAT_AUTH_WORKER_ISSN=""
+FATCAT_AUTH_WORKER_MATCHED=""
+FATCAT_AUTH_WORKER_GROBID_METADATA=""
