--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,6 @@ unified_test:
     POSTGRES_PASSWORD: "fatcat_pw"
     DATABASE_URL: "postgres://fatcat_user:fatcat_pw@postgres/fatcat_test"
     TEST_DATABASE_URL: "postgres://fatcat_user:fatcat_pw@postgres/fatcat_test"
-    AUTH_LOCATION: "dev.fatcat.wiki"
-    AUTH_KEY_IDENT: "2018-12-31-dev"
-    AUTH_SECRET_KEY: "VQe8kdn8laZ3MArKAzOeWWNUQgM6IjduG2jwKnSWehQ="
   services:
     - "postgres:11"
   before_script:
@@ -23,6 +20,7 @@ unified_test:
   script:
     - rustc --version && cargo --version && diesel --version
     - cd rust
+    - cp env.example .env
     - diesel database reset && diesel migration run
     - cargo build
     - cargo test -- --test-threads 1
