--- a/rust/env.example
+++ b/rust/env.example
@@ -1,5 +1,5 @@
 DATABASE_URL="postgres://fatcat:tactaf@localhost/fatcat"
-TEST_DATABASE_URL="postgres://fatcat:tactaf@localhost/fatcat_test
+TEST_DATABASE_URL="postgres://fatcat:tactaf@localhost/fatcat_test"
 AUTH_LOCATION="dev.fatcat.wiki"
 AUTH_KEY_IDENT="20190101-dev-dummy-key"
 AUTH_SECRET_KEY="5555555555555555555555555555555555555555xms="
