--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "fatcat"
 version = "0.1.0"
+edition = "2018"
 authors = ["Bryan Newbold <bnewbold@archive.org>"]
 description = "A scalable, versioned, API-oriented catalog of bibliographic entities and file metadata"
 license = "AGPL 3.0"
