continue breaking out python client

--- a/python/Pipfile
+++ b/python/Pipfile
@@ -18,6 +18,7 @@ pylint = "*"
 pg-view = "*"
 
 [packages]
+fatcat_client = { path = "./../python_client", editable = true }
 python-dotenv = "*"
 Flask = ">=1"
 flask-uuid = "*"
