--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -15,7 +15,6 @@ diesel = { version = "1.3", features = ["postgres", "uuid", "serde_json", "chron
 diesel_migrations = "1.3"
 dotenv = "0.9.0"
 clap = "2"
-error-chain = "0.12"
 uuid = "0.6"
 log = "*"
 data-encoding = "2.1"
@@ -24,6 +23,7 @@ lazy_static = "1.0"
 sha1 = { version = "0.6", features = ["std"] }
 macaroon = { git = "https://github.com/bnewbold/libmacaroon-rs", branch = "bnewbold-broken" }
 rand = "*"
+failure = "*"
 
 # API server
 chrono = { version = "0.4", features = ["serde"] }
@@ -37,7 +37,7 @@ slog = "^2.0"
 slog-term = "*"
 slog-async = "*"
 serde_json = "1.0"
-sentry = { version = "^0.12", default-features = false, features = ["with_client_implementation", "with_backtrace", "with_panic", "with_log", "with_rust_info", "with_error_chain"] }
+sentry = { version = "^0.12", default-features = false, features = ["with_client_implementation", "with_backtrace", "with_panic", "with_log", "with_rust_info", "with_failure"] }
 #cadence = "^0.16"
 
 # Command-line tools
