crude metrics integration (only a handful for now)

--- a/rust/env.example
+++ b/rust/env.example
@@ -5,3 +5,6 @@ AUTH_KEY_IDENT="20190101-dev-dummy-key"
 AUTH_SECRET_KEY="5555555555555555555555555555555555555555xms="
 AUTH_ALT_KEYS="20181220-dev:6666666666666666666666666666666666666666xms=,20181210-dev:7777777777777777777777777777777777777777xms="
 #SENTRY_DSN=
+# should be localhost IP, not 'localhost'
+#FATCAT_STATSD_HOST="127.0.0.1"
+#FATCAT_STATSD_PORT="8125"
