allow returning changelog index with editgroup

--- a/rust/fatcat-api-spec/api.yaml
+++ b/rust/fatcat-api-spec/api.yaml
@@ -467,6 +467,10 @@ definitions:
         <<: *FATCATIDENT
       editor:
         $ref: "#/definitions/editor"
+      changelog_index: # not returned in all contexts...
+        type: integer
+        example: 1048576
+        format: int64
       submitted:
         type: string
         format: date-time
